force-app/main/default/objects/Competitive_Knowledge__c/Competitive_Knowledge__c.object-meta.xml
<CustomObject>
    <description>Object to track Targeted Accounts and existing contracts with competitors.</description>
    <label>zCompetitive Knowledge</label>
    <nameField>
        <displayFormat>TA - {0000}</displayFormat>
        <label>Competitive Knowledge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Knowledge</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>