force-app/main/default/objects/Competitive_Knowledge__c/fields/Active_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Active_Evaluation__c</fullName>
    <label>Active Evaluation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>