force-app/main/default/objects/Competitive_Knowledge__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Cadec</fullName>
            </value>
            <value>
                <fullName>CarrierWeb</fullName>
            </value>
            <value>
                <fullName>Cooltrax</fullName>
            </value>
            <value>
                <fullName>Discrete Wireless</fullName>
            </value>
            <value>
                <fullName>DriveCam</fullName>
            </value>
            <value>
                <fullName>Garmin</fullName>
            </value>
            <value>
                <fullName>Geotab</fullName>
            </value>
            <value>
                <fullName>I.D. Systems (formerly, GE Asset Intelligence, Terion)</fullName>
            </value>
            <value>
                <fullName>iGlobal</fullName>
            </value>
            <value>
                <fullName>International Telematics</fullName>
            </value>
            <value>
                <fullName>JJ Keller</fullName>
            </value>
            <value>
                <fullName>McLeod</fullName>
            </value>
            <value>
                <fullName>MiX Telematics</fullName>
            </value>
            <value>
                <fullName>Navman Wireless</fullName>
            </value>
            <value>
                <fullName>Networkfleet</fullName>
            </value>
            <value>
                <fullName>PAR Logistics Management Systems</fullName>
            </value>
            <value>
                <fullName>PeopleNet</fullName>
            </value>
            <value>
                <fullName>RandMcNally/DriverTech</fullName>
            </value>
            <value>
                <fullName>Roadnet Telematics</fullName>
            </value>
            <value>
                <fullName>SageQuest</fullName>
            </value>
            <value>
                <fullName>SkyBitz</fullName>
            </value>
            <value>
                <fullName>Sprint</fullName>
            </value>
            <value>
                <fullName>Teletrac</fullName>
            </value>
            <value>
                <fullName>TMW</fullName>
            </value>
            <value>
                <fullName>TransCore</fullName>
            </value>
            <value>
                <fullName>Trimble</fullName>
            </value>
            <value>
                <fullName>U-Drove</fullName>
            </value>
            <value>
                <fullName>Verizon</fullName>
            </value>
            <value>
                <fullName>WebTech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>