force-app/main/default/objects/Competitive_Knowledge__c/fields/Competitor_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Company Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Competitor does not exist in system or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Competitor_Company</relationshipName>
    <type>Lookup</type>
</CustomField>