force-app/main/default/objects/Competitive_Knowledge__c/fields/Competitor_Mobile_Com_Units__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Mobile_Com_Units__c</fullName>
    <label>Competitor Mobile Com Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>