force-app/main/default/objects/Competitive_Knowledge__c/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Name</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipName>Competitive_Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>