force-app/main/default/objects/Competitive_Knowledge__c/fields/Competitor_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to competitive product .</description>
    <label>Competitor Product Name</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Competitor_Products__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Competitor_Company_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Competitor_Products__c</referenceTo>
    <relationshipName>Competitive_Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>