force-app/main/default/objects/Competitive_Knowledge__c/fields/Current_Competitor_Products__c.field-meta.xml
<CustomField>
    <fullName>Current_Competitor_Products__c</fullName>
    <inlineHelpText>Enter name such as Qualcomm MCP110, PNet tablet, Pnet BLU, etc</inlineHelpText>
    <label>Current Competitor Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>