force-app/main/default/objects/Competitive_Knowledge__c/fields/Eval_Results__c.field-meta.xml
<CustomField>
    <fullName>Eval_Results__c</fullName>
    <label>Eval Results</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Active_Evaluation__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>