force-app/main/default/objects/Competitive_Knowledge__c/fields/Eval_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Eval_Start_Date__c</fullName>
    <label>Eval Start Date</label>
    <type>Date</type>
</CustomField>