force-app/main/default/objects/Competitive_Knowledge__c/fields/Existing_Competitor_Contract_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Existing_Competitor_Contract_Expiration__c</fullName>
    <label>Existing Competitor Contract Expiration</label>
    <type>Date</type>
</CustomField>