force-app/main/default/objects/Competitive_Knowledge__c/fields/Fleet_Size__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Size__c</fullName>
    <formula>Account__r.Fleet_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From Fleet Seek Info on the Account</inlineHelpText>
    <label>Fleet Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>