force-app/main/default/objects/Competitive_Knowledge__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>Next Steps</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Callback</fullName>
            </value>
            <value>
                <fullName>On-site meeting</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Happy with competition</fullName>
            </value>
            <value>
                <fullName>Long term contract with competitor</fullName>
            </value>
            <value>
                <fullName>Email update</fullName>
            </value>
            <value>
                <fullName>Solution offered</fullName>
            </value>
            <value>
                <fullName>Price negotiations</fullName>
            </value>
            <value>
                <fullName>Contract out for signature</fullName>
            </value>
            <value>
                <fullName>Looking at Functionality</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>