force-app/main/default/objects/Competitive_Knowledge__c/fields/Satisfaction_Level__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Level__c</fullName>
    <label>Satisfaction Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Very Dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>