force-app/main/default/objects/Competitive_Knowledge__c/fields/Total_Eval_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Eval_Units__c</fullName>
    <label>Total Eval Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>