force-app/main/default/objects/Competitive_Knowledge__c/validationRules/Account_or_Lead_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_or_Lead_Required</fullName>
    <active>true</active>
    <description>Records must have either an Account or Lead populated</description>
    <errorConditionFormula>AND( ISBLANK(Account__c), ISBLANK( Lead__c ) )</errorConditionFormula>
    <errorMessage>Records must have either an Account or Lead populated</errorMessage>
</ValidationRule>