force-app/main/default/objects/Competitive_Knowledge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Competitive_Threat_At_Risk__c</columns>
    <columns>Competitor__c</columns>
    <columns>Competitor_Company_Name__c</columns>
    <columns>Competitor_Mobile_Com_Units__c</columns>
    <columns>Competitor_Name__c</columns>
    <columns>Competitor_Product_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>